# BraggTrack

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
braggtrack/: __init__.py
braggtrack/cli/: __init__.py  embed_dataset.py  inspect_datasets.py  segment_dataset.py  segment_synthetic.py  track_dataset.py  validate_dataset.py
braggtrack/io/: __init__.py  beamline.py  discovery.py  models.py  nexus.py  paths.py  validation.py
braggtrack/segmentation/: __init__.py  classical.py  features.py  otsu.py  pipeline.py  postprocess.py  projection.py
braggtrack/semantic/: __init__.py  dino.py  mips.py
braggtrack/tracking/: __init__.py  assignment.py  cost.py  lifecycle.py  metrics.py  synthetic.py
data/: README.md
data/sample_operando/: README.md
docs/: architecture.md  coding-practices.md
notebooks/: braggtrack_demo.ipynb
scripts/: ablation_week4.py  check_acceptance.py  check_week2_acceptance.py  check_week3_acceptance.py  check_week4_acceptance.py  ci_report.py  pre_pr_check.py
tests/: test_acceptance_script.py  test_ci_report.py  test_discovery.py  test_nexus_dependency.py  test_pre_pr_check.py  test_projection.py  test_segment_dataset_cli.py  test_segmentation_classical.py  test_segmentation_otsu.py  test_semantic_week4.py  test_tracking.py  test_week1_validation.py  test_week2_acceptance.py  test_week3_acceptance.py
