[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braggtrack"
version = "0.1.0"
description = "Semantic 4D kinematics and fracture tracking for operando diffraction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BraggTrack contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-image>=0.22",
  "networkx>=3.2",
  "h5py>=3.10",
]

[project.optional-dependencies]
torch = [
  "torch>=2.2",
  "transformers>=4.40",
]
notebook = [
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "pandas>=2.1",
]
dev = [
  "braggtrack[torch,notebook]",
  "pytest>=7.4",
]

[project.scripts]
braggtrack-inspect = "braggtrack.cli.inspect_datasets:main"
braggtrack-validate = "braggtrack.cli.validate_dataset:main"
braggtrack-segment-synthetic = "braggtrack.cli.segment_synthetic:main"
braggtrack-segment-dataset = "braggtrack.cli.segment_dataset:main"
braggtrack-track-dataset = "braggtrack.cli.track_dataset:main"
braggtrack-embed-dataset = "braggtrack.cli.embed_dataset:main"

[tool.setuptools.packages.find]
include = ["braggtrack*"]

[tool.setuptools.package-data]
braggtrack = ["py.typed"]
